<resources>
    <string name="app_name">Stage</string>
    <string name="search_hint">Search here</string>
    <string name="search_button">Search</string>
    <string name="tab1">Movies</string>
    <string name="tab2">Users</string>
    <string name="timeline">STAGE</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="enter_email">please enter you email</string>
    <string name="receive_otp">get activation code</string>
    <string name="enter_code">enter activation code</string>
    <string name="login">login</string>

    <string name="continue_">continue</string>
    <string name="logout">logout</string>
    <string name="follow">follow</string>

    <string name="search_nav_title">Search</string>
    <string name="home_nav_title">Home</string>
    <string name="profile_nav_title">Profile</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="unfollow">unfollow</string>
    <string name="completeProfile">Complete Your Pofile</string>
    <string name="username">Username</string>
    <string name="profilePic">Profile picture</string>
    <string name="confirm">Confirm</string>

</resources>