<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darker"
    android:backgroundTint="@color/darker">

    <EditText
        android:id="@+id/emailAddress"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:background="@color/light"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:paddingRight="20dp"
        android:paddingLeft="20dp"
        android:hint="@string/enter_email"
        android:textColor="#000000"
        android:textDirection="ltr"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/otpCode"
        android:layout_width="120dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:background="@color/light"
        android:ems="10"
        android:hint="@string/enter_code"
        android:inputType="number"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:textDirection="ltr"
        android:textSize="15sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailAddress" />

    <Button
        android:id="@+id/submitEmail"
        android:textSize="15sp"
        android:textColor="@color/darker"
        android:text="@string/receive_otp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:text="@string/login"
        android:textSize="15sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="394dp"
        android:layout_height="143dp"
        android:fontFamily="sans-serif-thin"
        android:text="@string/timeline"
        android:textAlignment="center"
        android:textColor="@color/yellow"
        android:textSize="96sp"
        android:textStyle="bold"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>