<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.Stage"
    android:background="@color/darker"
    android:backgroundTint="@color/darker">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:fontFamily="sans-serif-thin"
        android:text="@string/timeline"
        android:textAlignment="center"
        android:textColor="@color/yellow"
        android:textSize="96sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/completeProfile"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />



    <EditText
        android:id="@+id/usernameText"
        android:layout_width="215dp"
        android:layout_height="48dp"
        android:background="@color/light"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:paddingLeft="15dp"
        android:hint="@string/username"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profilePic"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="@+id/buttonLoadPicture"
        app:layout_constraintTop_toBottomOf="@+id/usernameText" />

    <Button
        android:id="@+id/buttonLoadPicture"
        android:layout_width="215dp"
        android:layout_height="215dp"
        android:background="@drawable/image"
        android:elegantTextHeight="false"
        android:text="+"
        android:textAlignment="center"
        android:textColor="@color/darker"
        android:textSize="34sp"
        app:backgroundTint="@null"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"></Button>

    <Button
        android:id="@+id/signup"
        android:layout_width="215dp"
        android:layout_height="48dp"
        android:text="@string/confirm"
        android:textColor="@color/black"
        android:theme="@style/Theme.Stage"
        android:layout_marginBottom="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>